v2 of index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     
     <h1> ABHISHEK </h1>
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        Aliquam cupiditate repellendus, repudiandae quae dolor ratione perferendis vero quaerat?
+        Neque numquam nobis eius voluptate,
+        nam consectetur recusandae? Accusantium hic nulla veritatis!</p>
 
 
 
