V3 of index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         Aliquam cupiditate repellendus, repudiandae quae dolor ratione perferendis vero quaerat?
         Neque numquam nobis eius voluptate,
         nam consectetur recusandae? Accusantium hic nulla veritatis!</p>
+    <h2> version 3</h2>
 
 
 
